2012-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_oci8.rb: fix code to test OCI8::CLOB.new(conn, '').

2012-04-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: 1. fix an exception when OCI8::CLOB.new(conn, '')
	    is called. 2. Reset the position of a newly created LOB.

2012-04-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: fix core dump.
	    See: https://github.com/kubo/ruby-oci8/issues/11
	    (reported by Raimonds Simanovskis)

2012-04-08  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/win32.c, lib/oci8/oracle_version.rb:
	    revise rdoc comments.

2012-04-06  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/ocihandle.c, ext/oci8/oradate.c,
	  lib/oci8/encoding-init.rb, lib/oci8/oci8.rb, lib/oci8/ocihandle.rb:
	    revise rdoc comments.

2012-04-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c, lib/oci8/oci8.rb: revise OraNumber's comments.

2012-04-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/ocinumber.c: change OCI8::Math::*'s comments
	    for yard.

2012-04-02  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: change the text format to markdown.

2012-03-18  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_datetime.rb: fix testcase failures in DST.
	    (reported by Yasuo Honda)

2012-03-11  KUBO Takehiro  <kubo@jiubao.org>
	* dist-files, docs/install-full-client.md, docs/install-instant-client.md,
	  docs/platform-specific-issues.md: add and fix documents.

2012-03-11  KUBO Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: fix warning: string literal in condition.
	    (pointed by andynu at github)

2012-01-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c: Use isnan() and isinf() instead of fpclassify()
	    for platforms which don't have fpclassify().
	    (reported by John Beckwith)

2012-01-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, pre-distclean.rb, ruby-oci8.gemspec: create map files